(subprojects + project).each { Project project ->
    project.repositories {
        mavenCentral()
        mavenLocal()
        maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
        maven { url "https://www.jitpack.io" };
    }

    project.plugins.apply("java")
    project.plugins.apply("idea")
    project.plugins.apply("maven-publish")
}

wrapper { Wrapper wrapper ->
    wrapper.gradleVersion "8.1.1"
}

project.tasks.create("cleanBuilds") { Task task -> // TODO sucks when files locked
    task.onlyIf { false }

    task.doLast {
        project.subprojects.each { Project p ->
            if (p.buildDir.exists()) {
                p.delete(p.buildDir)
            }
        }
    }
}

ext {
    var localFile = file("settings/local.json")
    if (localFile.exists())
        local = new groovy.json.JsonSlurper().parseText(localFile.text)
    else
        local = null

    var settingsFile = file("settings/settings.json")
    if (settingsFile.exists())
        settings = new groovy.json.JsonSlurper().parseText(settingsFile.text)
    else
        settings = null

    project.group = project.ext.settings?.projectSettings?.group ?: "group"
    project.version = project.ext.settings?.projectSettings?.version ?: "nil"

    buildScriptExtensions = [:]
    settings?.extensions?.each { String ext ->
        project.file("extensions/$ext").listFiles()?.each { File file ->
            var name = file.name.substring(0, file.name.indexOf('.'))

            if (buildScriptExtensions[name] == null)
                buildScriptExtensions[name] = []

            buildScriptExtensions[name] += file
        }
    }

    doExec = { String cmd ->
        cmd.execute(null, rootProject.projectDir).waitForProcessOutput(System.out, System.err)
    }

    getOutputJar = { Project p ->
        return "${rootProject.name}-${p.name}-${p.version}.jar"
    }

    child = { File p, String c ->
        return new File(p, c)
    }
}

project.tasks.create("buildRelease", Jar)

project.tasks.create("workflowBuild") { Task task ->
    task.dependsOn project.tasks.buildRelease
}

project.ext.buildScriptExtensions.rootProject?.each { File file ->
    project.apply(from: file)
}

subprojects.each { Project project ->
    project.group = project.parent.ext.settings?.projectSettings?.group ?: "group"
    project.version = project.parent.ext.settings?.projectSettings?.version ?: "nil"

    // src - java sources
    // gen - generated java sources
    // res - resources (e.g. assets)
    project.sourceSets.main.java.srcDirs = [
            "src", "gen"
    ]
    project.sourceSets.main.resources.srcDirs = [
            "res"
    ]

    project.ext {
        APArgs = []
        var APArgsConfig = project.parent.ext.settings?.APArgs
        if (APArgsConfig != null) {
            var global = APArgsConfig.global
            var local = APArgsConfig.local
            var full = (global ?: []) + (local?.get(project.name) ?: [])
            full.each { String arg ->
                if (!arg.contains("-A"))
                    APArgs += "-A" + arg
            }
        }

        deps = [:]

        var depsConf = project.parent.ext.settings?.dependencies
        var depsList = [:]
        depsConf?.list?.each { dep ->
            var k = dep.keySet()[0]
            var v = dep[k]
            depsList[k] = v
        }
        depsConf?.projects?.get(project.name)?.each { depType ->
            k = depType.key
            depType.value.each { String v ->
                var dep = null
                if (v.startsWith("project:")) {
                    dep = project.parent.project(v.substring(8))
                } else if (v.startsWith("list:")) {
                    dep = depsList[v.substring(5)]
                } else if (v.startsWith("direct:")) {
                    dep = v.substring(7)
                }

                if (dep == null)
                    project.logger.log(LogLevel.ERROR, "Uncknown depedency type $v")
                else
                    project.ext.deps[k] = dep
            }
        }
    }

    project.tasks.withType(JavaCompile) { JavaCompile task ->
        task.options.compilerArgs.addAll(project.ext.APArgs)

        task.options.encoding = "UTF-8"
        task.options.compilerArgs += "-Xlint:none"
        task.options.generatedSourceOutputDirectory.set(project.file("gen"))

        var home = project.parent.local?.jvm?.home
        if (home != null)
            options.forkOptions.executable = home

        task.options.compilerArgs += ['--release', '8']
        task.targetCompatibility = 8
        task.sourceCompatibility = JavaVersion.VERSION_16

        task.options.forkOptions.jvmArgs += [
                "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
                "--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED"
        ]

        doFirst {
            delete options.generatedSourceOutputDirectory.get().asFile.listFiles()
        }
    }

    project.dependencies {
        annotationProcessor "com.github.Anuken:jabel:93fde537c7"

        if (project.ext.deps.implementation != null)
            implementation project.ext.deps.implementation

        if (project.ext.deps.api != null)
            api project.ext.deps.api

        if (project.ext.deps.compileOnly != null)
            compileOnly project.ext.deps.compileOnly

        if (project.ext.deps.annotationProcessor != null)
            annotationProcessor project.ext.deps.annotationProcessor
    }

    project.tasks.create("copyJar") { Task task ->
        project.parent.ext.local?.copy?.get(project.name)?.each { p ->
            project.copy {
                from project.tasks.jar
                into p
            }
        }
    }

    project.tasks.jar { Jar jar ->
        jar.archiveFileName = project.parent.ext.getOutputJar(project)

        jar.duplicatesStrategy = DuplicatesStrategy.EXCLUDE
        jar.from {
            project.configurations.runtimeClasspath.collect { File file ->
                file.isDirectory() ? file : zipTree(file)
            }
        }

        jar.finalizedBy project.tasks.copyJar
    }

    project.parent.ext.buildScriptExtensions.get(project.name)?.each { File file ->
        project.apply(from: file)
    }
}

project.tasks.buildRelease { Jar jar ->
    jar.dependsOn project.subprojects*.tasks*.jar

    jar.duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    jar.from {
        [project.zipTree(project("android").tasks.collectJars.archiveFile.get()),
         project.zipTree(project("desktop").tasks.jar.archiveFile.get())]
    }

    jar.doLast {
        project.ext.local?.copy?.release?.each { String path ->
            project.copy {
                from { project.tasks.jar.archiveFile.get() }
                into local.copy.release[0]
            }
        }
        project.copy {
            from { project.tasks.jar.archiveFile.get() }
            into project.file("artifacts")
        }
    }

    jar.finalizedBy project.tasks.cleanBuilds
}